--- a/app/src/main/res/layout/section_headers.xml
+++ b/app/src/main/res/layout/section_headers.xml
@@ -3,7 +3,6 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp"
     android:background="#fff">
 
 
@@ -15,6 +14,6 @@
         android:textSize="21sp"
         android:text = "Header"
         android:background = "@android:color/white"
-        android:textColor="@android:color/holo_red_dark" />
+        android:textColor="@android:color/darker_gray" />
 
 </LinearLayout>
