--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,9 @@
    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
-       android:layout_height="wrap_content"            />
+       android:layout_height="wrap_content"
+       android:divider = "@drawable/list_divider"
+       />
 </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
